[tool.poetry]
name = "SQLGen"
version = "0.1.0"
description = ""
authors = ["qidanrui <qidanrui@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
optuna = "^2.10.1"
featuretools = "^1.13.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
